2006-03-20  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by vicki
     
        Testcase for fix for:   
        <http://bugzilla.opendarwin.org/show_bug.cgi?id=7363>
        REGRESSION (r12872): Repro crash when clicking the Quick Reply box in Gmail
        
        * fast/forms/textfield-focus-out-expected.txt: Added.
        * fast/forms/textfield-focus-out.html: Added.

2006-03-20  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Anders.
        
        - test case for <rdar://problem/4446749> 10.4.4: safari crash in DOM::NamedAttrMapImpl::setNamedItem
        (and some similar cases that I also fixed)

        * fast/dom/Element/attr-param-typechecking-expected.txt: Added.
        * fast/dom/Element/attr-param-typechecking.html: Added.
        * fast/dom/Element/resources: Added.
        * fast/dom/Element/resources/TEMPLATE.html: Added.
        * fast/dom/Element/resources/attr-param-typechecking.js: Added.

2006-03-20  Eric Seidel  <eseidel@apple.com>

        Reviewed by mjs.

        Test for: <rdar://problem/4483882> REGRESSION (417.8-TOT): crash at yourmovies.com.au in WebCore::HTMLTokenizer::reset() + 92 (7818)

        * fast/tokenizer/external-script-document-open-expected.txt: Added.
        * fast/tokenizer/external-script-document-open.html: Added.
        * fast/tokenizer/resources/external-script-document-open.js: Added.
        * fast/tokenizer/resources/write-external-script-open.js: Added.
        * fast/tokenizer/write-external-script-open-expected.txt: Added.
        * fast/tokenizer/write-external-script-open.html: Added.
        * fast/tokenizer/write-inline-script-open-expected.txt: Added.
        * fast/tokenizer/write-inline-script-open.html: Added.

2006-03-20  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Adele.
        
        - test case for <rdar://problem/4362396> REGRESSION: (417-420) stopPropagation is not working for click event listener (onclick works fine)
