@@ -1,0 +1,13 @@
+<title>Test case for Radar 4411663</title>
+<script>
+if (window.layoutTestController)
+    layoutTestController.dumpAsText();
+var para = document.createElement("p");
+for (var x = 0; x < 1000; x++) {
+    var newNode = document.createTextNode("asdf " + x);
+    para.appendChild(newNode);
+}
+var list = para.childNodes;
+var bar = list["bar"];
+</script>
+<p>SUCCESS (you didn't crash)</p>
